<?xml version="1.0"?>
<package format="2">
  <name>producer_consumer</name>
  <version>1.12.0</version>
  <description>
    A package containing produces consumer thread example.
  </description>
  <maintainer email="yildirimg@mef.edu.tr">Göktuğ Yıldırım</maintainer>
  <license>Apache</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>


</package>
